[package]
name = "libspnav"
version = "0.1.0"
description = "Rust wrapper to libspnav"
authors = ["James Buckley <xanium4332@gmail.com>"]
repository = "https://github.com/xanium4332/libspnav-rs"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[features]
serde-serialize = ["serde"]

[dependencies]
libspnav-sys = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }